# gentle_introduction

./: ssh-copy-id odroid@10.0.0.1  ssh-copy-id odroid@10.0.0.1.pub
devel/: .catkin  .rosinstall  setup.sh
devel/lib/packagename/: client_name_executable  hello_executable  log_executable  new_keyboard_executable  publish_velocity_executable  publisher_executable  reverse_vel_cmd_executable  server_name_executable  set_background_color_executable  spawn_turtle_executable  subscriber_executable
devel/lib/pkgconfig/: packagename.pc
devel/share/packagename/cmake/: packagenameConfig.cmake
src/packagename/: CMakeLists.txt  package.xml  parameterlist
src/packagename/bag/: square.bag
src/packagename/launch/: doublesim.launch  keyboardlauncher.launch  launch_name.launch  reverse.launch  triplesim.launch  yellow_launch.launch
src/packagename/src/: client_name.cpp  hello.cpp  log_name.cpp  new_keyboard.cpp  new_keyboard.py  publish_velocity_with_max.cpp  publisher_name.cpp  reverse_cmd_vel.cpp  server_name.cpp  set_background_color.cpp  subscriber_name.cpp
